- fixed a bug that prevented some DFA diagram from being completely displayed (scrollable zone too small)
- fixed a bug in the syntax coloring parser when a multi-line comment where located at the end of file
- fixed a bug where some menu items were not disabled in debug mode
- fixed a bug where AST node where not correctly added when a node became parent (nil node)

Version 1.0b5 - 10/22/06

- allow traversal of bundle on Mac OS X when choosing files
- fixed bug in syntax coloring with escape character
- plugin: now clear the read-only status

Version 1.0b4 - 09/28/06

- added menu shortcut for Generate Code
- fixed a bug where the tab settings were ignored in the editor
- fixed a bug that would prevent AW to run on Fedora Core 5

Version 1.0b3 - 09/13/06

- fixed a bug where checking the DOT tool existence would fail with white space in the path
- fixed a bug where saving a document without path would fail

Version 1.0b2 - 09/03/06

- clear console status message when console is cleared
- save automatically the position and size of each project's window
- new startup option: open last saved document, open all opened documents when ANTLRWorks was closed

- fixed a bug where the cursor highlighting couldn't be turned off
- fixed a bug in text rendering that prevented the cursor to be positioned at the correct location
- fixed a bug in the text rendering that prevented the selected text to be highlighted correctly

Version 1.0b1 - 08/26/06

- new real-time syntax coloring
- IntelliJ plugin integration
- improved debugger UI with detachable panels
- improved speed when checking grammar (delay creation of error paths)
- prefs: can specify now ANTLR 3 classpath
- handle NonRegularDecisionMessage errors
- display Out Of Memory error
- rules are sorted in the debugger input dialog
- do not analyze the grammar when debugging remotely
- mark the grammar as dirty if the file is modified outside ANTLRWorks
- resize view when graphic elements are moved (DFA decision, etc)